@@ -1,3 +1,4 @@
+from plone.app.textfield import RichText
 from plone.directives import form
 from plone.namedfile.field import NamedFile
 from plone.namedfile.field import NamedImage
@@ -17,3 +18,9 @@ class IImageSchema(form.Schema):
 
     form.primary('image')
     image = NamedImage(title=u'image')
+
+
+class ITextSchema(form.Schema):
+
+    form.primary('text')
+    text = RichText(title=u'Text')
