@@ -5,7 +5,8 @@ Changelog
 2.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Dexterity: add support for richtext fields.
+  [jone]
 
 
 2.3.1 (2013-09-16)
